k8s/trigger/08-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: fraud-app-event-listener
  name: el-fraud-app-event-listener-route
spec:
  port:
    targetPort: http-listener
  tls:
    termination: edge
  to:
    kind: Service
    name: el-fraud-app-event-listener
    weight: 100
  wildcardPolicy: None
